# abc

./: .appveyor.yml  .gitignore  .gitmodules  .hgignore  .travis.yml  1.txt  CMakeLists.txt  Makefile  Makefile.custom  Makefile_calypto  Participants.md  README-abc.md  README.md  abc.dsp  abc.dsw  abc.opt  abc.plg  abc.rc  abcexe.dsp  abclib.dsp  abclib.dsw  abclib.opt  abclib.plg  abctestlib.dsp  abctestlib.dsw  abctestlib.opt  abctestlib.plg  bug_report_template.txt  c17.blif  c2670.bench  c432.bench  circuit.dot  compile_commands.json  comprehensive_test.sh  copyright.txt  demo.c  depends.sh  diagnosis.cpp  diagnosis.sh  environment.devenv.yml  (+24 more)
.github/disabled-workflows/: build-windows.yml
.github/scripts/: abcexe.vcxproj  abclib.vcxproj.template
.github/workflows/: build-mingw.yml  build-posix-cmake.yml  build-posix.yml  build-windows.yml  c-cpp.yml  ci.yml  codeql.yml  conda-dev.yml  lockdown.yml  lockdown.yml.disabled  repo-lockdown.yml  win.yml
Project_25S_diag/bin_reference/: c17-003.failLog
Project_25S_diag/doc/: project_diag_25S.docx
Project_25S_diag/failLog/: Info_failLog.xlsx  c1355-003.failLog  c1355-004.failLog  c1355-006.failLog  c1355-007.failLog  c1355-008.failLog  c1355-009.failLog  c1355-011.failLog  c1355-012.failLog  c1355-013.failLog  c1355-014.failLog  c1355-015.failLog  c1355-016.failLog  c1355-017.failLog  c1355-019.failLog  c1355-020.failLog  c17-001.failLog  c17-002.failLog  c17-003.failLog  c17-004.failLog  c17-005.failLog  c17-006.failLog  c17-007.failLog  c17-008.failLog  c17-009.failLog  c17-011.failLog  c17-012.failLog  c17-013.failLog  c17-014.failLog  c17-016.failLog  c17-017.failLog  c17-018.failLog  c17-020.failLog  c2670-001.failLog  c2670-002.failLog  c2670-003.failLog  c2670-004.failLog  c2670-005.failLog  c2670-006.failLog  c2670-007.failLog  (+126 more)
Project_25S_diag/patterns/: golden_c1355.ptn  golden_c17.ptn  golden_c2670.ptn  golden_c3540.ptn  golden_c432.ptn  golden_c499.ptn  golden_c6288.ptn  golden_c7552.ptn  golden_c880.ptn
Project_25S_diag/sample_circuits/: c1355.ckt  c1355.ckt.uf  c17.ckt  c1908.ckt  c2670.ckt  c2670.ckt.uf  c3540.ckt  c3540.ckt.uf  c432.ckt  c432.ckt.uf  c499.ckt  c499.ckt.uf  c5315.ckt  c6288.ckt  c6288.ckt.uf  c7552.ckt  c7552.ckt.uf  c880.ckt  c880.ckt.uf
abc70930/: Instructions_for_Mac_OS_X_X_code_users.rtf  abc.dsp  abc.plg  abc.rc  abclib.dsp  readme  regtest_output.txt
abc70930/examples/: frg2.blif  s38417.blif
abc70930/src/: abc.1  generic.c
abc70930/src/abc.xcodeproj/: project.pbxproj  raiyan.pbxuser  raiyan.perspectivev3
abc70930/src/base/: temp.c
cmake/: abcConfig.cmake.in  coverage.cmake
examples/: C2670.blif  ac.v  apex4.pla  i10.blif  pj1.blif  s38584.bench  s444.blif  s5378.blif  s6669.blif
lsv/: create-branches.sh  delete-branches.sh  participants-id.csv  update-branches.sh
lsv/admin/: create-branches.sh  delete-branches.sh  disable-lockdown.sh  enable-lockdown.sh  participants-id.csv  update-branches.sh
lsv/example/: full_adder.blif
lsv/pa1/: README.md
scripts/: abc.rc  abc_common.py  bmc2.sh  bmc3.sh  dprove.sh  main.py  multi_prove.sh  new_abc_commands.py  niklas.py  par.py  reachx_cmd.py  simple.sh  simple_bip.sh  simple_liveness.sh  simple_prove.sh  simple_sat.sh  super_prove.sh
src/: csat_apis.h  demo.c  generic.c  generic.h  starter.c  template.c
src/abc8/aig/: aig.h  aigDfs.c  aigHaig.c  aigMan.c  module.make
src/abc8/bsat/: satMem.h  satSolver.c  satStore.c  satStore.h  satUtil.c
src/abc8/cnf/: cnf.h
src/abc8/dar/: dar.h  darInt.h  darRefact.c
src/abc8/fra/: fra.h  fraBmc.c  fraCec.c  fraCnf.c  fraPart.c  fraSat.c  module.make
src/abc8/ioa/: ioa.h
src/abc8/kit/: cloud.c  kit.h  kitGraph.c  module.make
src/abc8/vec2/: vecVec.h
src/acd/: ac_decomposition.hpp  ac_wrapper.cpp  ac_wrapper.h  kitty_algorithm.hpp  kitty_operations.hpp  kitty_operators.hpp  module.make
src/aig/aig/: CMakeLists.txt  aig.h  aigCanon.c  aigCheck.c  aigCuts.c  aigDfs.c  aigDoms.c  aigDup.c  aigFact.c  aigFanout.c  aigFrames.c  aigHaig.c  aigInter.c  aigIso.c  aigJust.c  aigMan.c  aigMem.c  aigMffc.c  aigObj.c  aigOper.c  aigOrder.c  aigPack.c  aigPart.c  aigPartReg.c  aigPartSat.c  aigRepar.c  aigRepr.c  aigRet.c  aigRetF.c  aigScl.c  aigSeq.c  aigShow.c  aigSplit.c  aigTable.c  aigTest.c  aigTime.c  aigTiming.c  aigTruth.c  aigTsim.c  aigUtil.c  (+3 more)
src/aig/bar/: bar.c  bar.h  module.make
src/aig/bbl/: bblif.c  bblif.h  module.make
src/aig/bbr/: bbr.h  bbrCex.c  bbrImage.c  bbrNtbdd.c  bbrReach.c  module.make
src/aig/bdc/: bdc.h  bdcCore.c  bdcDec.c  bdcInt.h  bdcSpfd.c  bdcTable.c  bdc_.c  module.make
src/aig/cec/: cec.c  cec.h  cecAig.c  cecCec.c  cecChoice.c  cecClass.c  cecCnf.c  cecCore.c  cecCorr.c  cecCorr_updated.c  cecInt.h  cecIso.c  cecMan.c  cecPat.c  cecSat.c  cecSeq.c  cecSim.c  cecSolve.c  cecSweep.c  cecSynth.c  module.make
src/aig/cec2/: cec.h  cecAig.c  cecClass.c  cecCnf.c  cecCore.c  cecInt.h  cecSat.c  cecSat2.c  cecSim.c  cecStatus.c  cecSweep.c  module.make
src/aig/cgt/: cgt.h  cgtAig.c  cgtCore.c  cgtDecide.c  cgtInt.h  cgtMan.c  cgtSat.c  module.make
src/aig/cnf/: cnf.h  cnfCore.c  cnfCut.c  cnfData.c  cnfFast.c  cnfMan.c  cnfMap.c  cnfPost.c  cnfUtil.c  cnfWrite.c  cnf_.c  module.make
src/base/main/: CMakeLists.txt  abcapis.h  libSupport.c  main.c  main.h  mainFrame.c  mainInit.c  mainInt.h  mainLib.c  mainMC.c  mainReal.c  mainUtils.c  module.make
src/ext-lsv/: lsvCmd.cpp  module.make
src/format/: format.c  module.make  verilog_format.c
src/python/: abc.sh  abcpy_test.py  build.txt  getch.py  module.make  package.py  pyabc.i  pyabc_split.py  redirect.py  setup.py
test/: CMakeLists.txt  test_invariant_pstdint.h  write_cnf_dangling.sh
test/gia/: CMakeLists.txt  gia_test.cc  origins_test.cc  test_origins.genlib
test/sparc-alignment/: CMakeLists.txt  abc.script  aligntest.sh  input.box  input.lut  input.sym  input.xaig
testcase/: c1355.bench  c17.bench  c1908.bench  c2670.bench  c3540.bench  c432.bench  c499.bench  c5315.bench  c6288.bench  c7552.bench  c880.bench
tools/: clang_toolchain.cmake  mk-cmakelists.py
(+3027 files in other folders)
